--- a/index.html
+++ b/index.html
@@ -11,27 +11,26 @@
   <canvas id="matrix"></canvas>
 
   <header class="site-header">
-  <div class="brand">SAYANI <span>MAITY</span></div>
+    <div class="brand">SAYANI <span>MAITY</span></div>
 
-  <nav class="top-nav">
-    <a href="#home" class="active">Home</a>
-    <a href="#about">About</a>
-    <a href="#skills">Skills</a>
-    <a href="#projects">Projects</a>
-    <a href="#research">Research</a>
-    <a href="#empire">The Foundation of Forever</a>
-    <a href="#contact">Contact</a>
-    <a class="btn" href="resume.pdf" download>Download Resume</a>
-  </nav>
+    <nav class="top-nav">
+      <a href="#home" class="active">Home</a>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#research">Research</a>
+      <a href="#empire">The Foundation of Forever</a>
+      <a href="#contact">Contact</a>
+      <a class="btn" href="resume.pdf" download>Download Resume</a>
+    </nav>
 
-  <!-- Hamburger for mobile -->
-  <div class="hamburger" id="hamburger">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-</header>
-
+    <!-- Hamburger for mobile -->
+    <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </header>
 
   <main class="container">
 
@@ -53,9 +52,18 @@
       </div>
 
       <div class="slideshow" id="slideshow">
-        <div class="slide active"><img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt="CMTL"><div class="cap">CMTL — CyberSec Multi-Tool Launcher</div></div>
-        <div class="slide"><img src="assets/AI- powered Phishing Email Detector (In Development).jpg" alt="AI Phishing Detector"><div class="cap">AI Phishing Detector (In Dev)</div></div>
-        <div class="slide"><img src="assets/Forensic Case Study.jpg" alt="Forensic Case Study"><div class="cap">Forensic Case Study</div></div>
+        <div class="slide active">
+          <img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt="CMTL">
+          <div class="cap">CMTL — CyberSec Multi-Tool Launcher</div>
+        </div>
+        <div class="slide">
+          <img src="assets/AI- powered Phishing Email Detector (In Development).jpg" alt="AI Phishing Detector">
+          <div class="cap">AI Phishing Detector (In Dev)</div>
+        </div>
+        <div class="slide">
+          <img src="assets/Forensic Case Study.jpg" alt="Forensic Case Study">
+          <div class="cap">Forensic Case Study</div>
+        </div>
       </div>
     </aside>
 
@@ -65,7 +73,7 @@
         <img src="assets/profile.jpg" alt="Sayani profile" class="hero-photo"/>
         <h1 class="hero-name">SAYANI MAITY</h1>
         <ul class="hero-sub">
-          <li>B.sc. Digital Forensic Student 🔍</li>
+          <li>B.Sc. Digital Forensic Student 🔍</li>
           <li>Academic Researcher 👩‍💻</li>
           <li>Curious learner 💻</li>
           <li>Exploring security & coding 🔐</li>
@@ -93,21 +101,22 @@
           <article class="project-card">
             <img src="assets/Basic-Strong-Password-Generator.jpg" alt="Basic Strong Password Generator">
             <h3>Basic Strong Password Generator (2025)</h3>
-            <p>The Caesar Cipher is one of the oldest known encryption techniques. It works by shifting each letter of the plaintext by a fixed number of positions in the alphabet. This tool enhances it by adding auto-decryption and brute-force cracking for educational and security learning purposes. </p>
+            <p>A simple Python script to generate a strong random password of desired length using uppercase letters, lowercase letters, digits, and special characters.</p>
             <p><a href="https://github.com/isayani-78/-Basic-Strong-Password-Generator" target="_blank" class="github-link">View on GitHub</a></p>
           </article>
 
           <article class="project-card">
             <img src="assets/caesar-cipher-generator.jpg" alt="Caeser Cipher Generator">
             <h3>Caeser Cipher Generator (2025)</h3>
-            <p>Encrypt and decrypt messages using Caesar cipher with a user-friendly interface.</p>
+            <p>The Caesar Cipher is one of the oldest known encryption techniques. It works by shifting each letter of the plaintext by a fixed number of positions in the alphabet. This tool enhances it by adding auto-decryption and brute-force cracking for educational and security learning purposes..</p>
             <p><a href="https://github.com/isayani-78/caesar-cipher-generator" target="_blank" class="github-link">View on GitHub</a></p>
           </article>
 
           <article class="project-card">
             <img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt="CMTL">
             <h3>CMTL — CyberSec Multi-Tool Launcher (2025–Present)</h3>
-            <p>Centralized toolkit for scanning, fingerprinting, and triage.</p>
+            <p>Cyber Security Multi-Tool Launcher is a unified GUI-based platform that integrates powerful network scanning, vulnerability assessment, penetration testing, and forensic tools into a single tool.
+Instead of manually running multiple tools, users can launch and manage them through one centralized interface with "Just a Click".</p>
             <p><a href="https://github.com/isayani-78/CMTL" target="_blank" class="github-link">View on GitHub</a></p>
           </article>
 
@@ -144,19 +153,6 @@
     </footer>
 
   </main>
-
-  <style>
-    /* Make "View on GitHub" links white */
-    a.github-link {
-      color: #fff;
-      text-decoration: none;
-      transition: color 0.3s;
-    }
-
-    a.github-link:hover {
-      color: #4CAF50; /* optional hover effect */
-    }
-  </style>
 
   <script src="script.js"></script>
 </body>
