--- a/index.html
+++ b/index.html
@@ -11,26 +11,27 @@
   <canvas id="matrix"></canvas>
 
   <header class="site-header">
-    <div class="brand">SAYANI <span>MAITY</span></div>
+  <div class="brand">SAYANI <span>MAITY</span></div>
 
-    <nav class="top-nav">
-      <a href="#home" class="active">Home</a>
-      <a href="#about">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#projects">Projects</a>
-      <a href="#research">Research</a>
-      <a href="#empire">The Foundation of Forever</a>
-      <a href="#contact">Contact</a>
-      <a class="btn" href="resume.pdf" download>Download Resume</a>
-    </nav>
+  <nav class="top-nav">
+    <a href="#home" class="active">Home</a>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#projects">Projects</a>
+    <a href="#research">Research</a>
+    <a href="#empire">The Foundation of Forever</a>
+    <a href="#contact">Contact</a>
+    <a class="btn" href="resume.pdf" download>Download Resume</a>
+  </nav>
 
-    <!-- Hamburger for mobile -->
-    <div class="hamburger" id="hamburger">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-  </header>
+  <!-- Hamburger for mobile -->
+  <div class="hamburger" id="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+</header>
+
 
   <main class="container">
 
@@ -52,48 +53,90 @@
       </div>
 
       <div class="slideshow" id="slideshow">
-        <div class="slide active">
-          <img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt="CMTL">
-          <div class="cap">CMTL — CyberSec Multi-Tool Launcher</div>
-        </div>
-        <div class="slide">
-          <img src="assets/AI- powered Phishing Email Detector (In Development).jpg" alt="AI Phishing Detector">
-          <div class="cap">AI Phishing Detector (In Dev)</div>
-        </div>
-        <div class="slide">
-          <img src="assets/Forensic Case Study.jpg" alt="Forensic Case Study">
-          <div class="cap">Forensic Case Study</div>
-        </div>
+        <div class="slide active"><img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt="CMTL"><div class="cap">CMTL — CyberSec Multi-Tool Launcher</div></div>
+        <div class="slide"><img src="assets/AI- powered Phishing Email Detector (In Development).jpg" alt="AI Phishing Detector"><div class="cap">AI Phishing Detector (In Dev)</div></div>
+        <div class="slide"><img src="assets/Forensic Case Study.jpg" alt="Forensic Case Study"><div class="cap">Forensic Case Study</div></div>
       </div>
     </aside>
 
     <!-- PAGES -->
     <section id="home" class="page active">
-      <div class="hero-center">
-        <img src="assets/profile.jpg" alt="Sayani profile" class="hero-photo"/>
-        <h1 class="hero-name">SAYANI MAITY</h1>
-        <ul class="hero-sub">
-          <li>B.Sc. Digital Forensic Student 🔍</li>
-          <li>Academic Researcher 👩‍💻</li>
-          <li>Curious learner 💻</li>
-          <li>Exploring security & coding 🔐</li>
-        </ul>
-      </div>
-    </section>
+  <div class="hero-center">
+    <img src="assets/profile.jpg" alt="Sayani profile" class="hero-photo"/>
+    <h1 class="hero-name">SAYANI MAITY</h1>
+    <ul class="hero-sub">
+      <li>B.Sc. Digital Forensic Student 🔍</li>
+      <li>Academic Researcher 👩‍💻</li>
+      <li>Curious learner 💻</li>
+      <li>Exploring security & coding 🔐</li>
+    </ul>
+  </div>
+</section>
+
 
     <section id="about" class="page">
-      <div class="content">
-        <!-- About content here (unchanged) -->
-      </div>
-    </section>
+  <div class="content">
+    <h2>About Me</h2>
+    <p>I am <strong>SAYANI MAITY</strong>, currently pursuing <strong>B.Sc. in Digital Forensics</strong> (2023–2026). I specialize in digital forensics, penetration testing, OSINT, and security tooling. I create detailed case reports, analyze digital artifacts, and reconstruct system events to uncover evidence. I actively participate in Capture The Flag (CTF) challenges, hands-on security research, and explore AI-assisted detection tools, automation, and threat analysis techniques.</p>
+    <p>My skill set includes Python, Bash, shell scripting, VAPT, WAPT, threat management, Nmap, Burp Suite, Autopsy, networking, OSINT research, and cloud basics. I am deeply passionate about learning, sharing knowledge, and applying my expertise to practical cybersecurity projects that strengthen digital systems and uncover vulnerabilities.</p>
+    <p>I am curious, analytical, and highly detail-oriented, which drives me to explore complex digital problems and uncover practical solutions. Beyond academics, I am passionate about ethical hacking, experimenting with new tools, and contributing to cybersecurity communities. I strongly believe in continuous learning and mentorship, often collaborating on projects and sharing insights with peers. My goal is to merge technical expertise with creativity, applying my knowledge to real-world scenarios to strengthen digital systems, uncover vulnerabilities ethically, and make meaningful contributions to the field of cybersecurity.</p>
+
+    <h3>🎓 Education</h3>
+    <ul>
+      <li>📘 <strong>ICSE, ISC (Pure Science):-</strong> St. Thomas' High School, Howrah, West Bengal</li>
+      <li>💻 <strong>B.Sc. Digital Forensics:-</strong> Indian School of Ethical Hacking (ISOEH) under Maulana Abul Kalam Azad University, West Bengal, (MAKAUT), 2023–2026</li>
+    </ul>
+
+    <h3>🎯 Goal</h3>
+    <p>As a passionate Digital Forensic student, my goal is to deepen my knowledge of cybersecurity, digital investigations, and ethical hacking. I strive to develop practical skills that help uncover digital evidence, secure systems, and solve complex security challenges. I am committed to continuous learning, hands-on research, and exploring innovative solutions in cybersecurity, coding, and AI-assisted detection. Ultimately, I aim to become a proficient professional who bridges the gap between theory and real-world application, contributing meaningfully to the digital security landscape.</p>
+  </div>
+</section>
+
 
     <section id="skills" class="page">
-      <div class="content">
-        <!-- Skills content here (unchanged) -->
-      </div>
-    </section>
+  <div class="content">
+    <h2>Skills</h2>
+    <div class="skill-grid-columns">
 
-    <!-- Projects Section with white "View on GitHub" links -->
+      <!-- Languages & Scripting -->
+      <div class="skill-column">
+        <h3>Languages & Scripting</h3>
+        <div class="skill" data-val="90"><label>HTML</label><div class="bar"><div class="fill" data-val="90"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="80"><label>PYTHON</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="85"><label>MATPLOTLIB</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="75"><label>NUMPY</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>BASH</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="80"><label>SHELL SCRIPTING</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
+      </div>
+
+      <!-- Security & Pentesting -->
+      <div class="skill-column">
+        <h3>Security & Pentesting</h3>
+        <div class="skill" data-val="85"><label>VAPT</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="80"><label>WAPT</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="80"><label>Threat Management</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="78"><label>Burp</label><div class="bar"><div class="fill" data-val="78"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="78"><label>Nmap</label><div class="bar"><div class="fill" data-val="78"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="75"><label>Internet Security</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="75"><label>Network Security</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
+      </div>
+
+      <!-- Forensic & OSINT -->
+      <div class="skill-column">
+        <h3>Forensic & OSINT</h3>
+        <div class="skill" data-val="90"><label>Digital Forensic</label><div class="bar"><div class="fill" data-val="90"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="85"><label>Computer Forensic</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="85"><label>OSINT</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="78"><label>Autopsy</label><div class="bar"><div class="fill" data-val="78"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="75"><label>WireShark</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="75"><label>Cloud Basics</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
     <section id="projects" class="page">
       <div class="content">
         <h2>Projects</h2>
@@ -101,22 +144,21 @@
           <article class="project-card">
             <img src="assets/Basic-Strong-Password-Generator.jpg" alt="Basic Strong Password Generator">
             <h3>Basic Strong Password Generator (2025)</h3>
-            <p>A simple Python script to generate a strong random password of desired length using uppercase letters, lowercase letters, digits, and special characters.</p>
+            <p>The Caesar Cipher is one of the oldest known encryption techniques. It works by shifting each letter of the plaintext by a fixed number of positions in the alphabet. This tool enhances it by adding auto-decryption and brute-force cracking for educational and security learning purposes. </p>
             <p><a href="https://github.com/isayani-78/-Basic-Strong-Password-Generator" target="_blank" class="github-link">View on GitHub</a></p>
           </article>
 
           <article class="project-card">
             <img src="assets/caesar-cipher-generator.jpg" alt="Caeser Cipher Generator">
             <h3>Caeser Cipher Generator (2025)</h3>
-            <p>The Caesar Cipher is one of the oldest known encryption techniques. It works by shifting each letter of the plaintext by a fixed number of positions in the alphabet. This tool enhances it by adding auto-decryption and brute-force cracking for educational and security learning purposes..</p>
+            <p>Encrypt and decrypt messages using Caesar cipher with a user-friendly interface.</p>
             <p><a href="https://github.com/isayani-78/caesar-cipher-generator" target="_blank" class="github-link">View on GitHub</a></p>
           </article>
 
           <article class="project-card">
             <img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt="CMTL">
             <h3>CMTL — CyberSec Multi-Tool Launcher (2025–Present)</h3>
-            <p>Cyber Security Multi-Tool Launcher is a unified GUI-based platform that integrates powerful network scanning, vulnerability assessment, penetration testing, and forensic tools into a single tool.
-Instead of manually running multiple tools, users can launch and manage them through one centralized interface with "Just a Click".</p>
+            <p>Centralized toolkit for scanning, fingerprinting, and triage.</p>
             <p><a href="https://github.com/isayani-78/CMTL" target="_blank" class="github-link">View on GitHub</a></p>
           </article>
 
@@ -153,6 +195,19 @@ Instead of manually running multiple tools, users can launch and manage them thr
     </footer>
 
   </main>
+
+  <style>
+    /* Make "View on GitHub" links white */
+    a.github-link {
+      color: #fff;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+
+    a.github-link:hover {
+      color: #4CAF50; /* optional hover effect */
+    }
+  </style>
 
   <script src="script.js"></script>
 </body>
