--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
       <!-- Languages & Scripting -->
       <div class="skill-column">
         <h3>Languages & Scripting</h3>
-        <div class="skill" data-val="90"><label>HTML</label><div class="bar"><div class="fill" data-val="90"></div><span class="percent">0%</span></div></div>
-        <div class="skill" data-val="80"><label>PYTHON</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
-        <div class="skill" data-val="85"><label>MATPLOTLIB</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
-        <div class="skill" data-val="75"><label>NUMPY</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
-        <div class="skill" data-val="70"><label>BASH</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-        <div class="skill" data-val="80"><label>SHELL SCRIPTING</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="90"><label>Python</label><div class="bar"><div class="fill" data-val="90"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="80"><label>Matplotlib</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="85"><label>Bash</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="75"><label>Shell Scripting</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>HTML</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="80"><label>NumPy</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
       </div>
 
       <!-- Security & Pentesting -->
@@ -126,15 +126,55 @@
         <h3>Forensic & OSINT</h3>
         <div class="skill" data-val="90"><label>Digital Forensic</label><div class="bar"><div class="fill" data-val="90"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="85"><label>Computer Forensic</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
-        <div class="skill" data-val="85"><label>OSINT</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
-        <div class="skill" data-val="78"><label>Autopsy</label><div class="bar"><div class="fill" data-val="78"></div><span class="percent">0%</span></div></div>
-        <div class="skill" data-val="75"><label>WireShark</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
-        <div class="skill" data-val="75"><label>Cloud Basics</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="80"><label>Mobile Forensic</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="80"><label>Network Forensic</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="75"><label>Social Engineering</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="75"><label>Information Gathering</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Blue Team</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+      </div>
+
+      <!-- Operating Systems -->
+      <div class="skill-column">
+        <h3>Operating Systems</h3>
+        <div class="skill" data-val="85"><label>Unix</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="90"><label>GNU/Linux</label><div class="bar"><div class="fill" data-val="90"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="80"><label>Ubuntu</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="80"><label>Kali Linux</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Black Arch</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Parrot</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+      </div>
+
+      <!-- Tools -->
+      <div class="skill-column">
+        <h3>Tools</h3>
+        <div class="skill" data-val="85"><label>Nmap</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="75"><label>Autopsy</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>SPF (Smartphone Forensic)</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="75"><label>Magnet AXIOM</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>FTK Imager</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="80"><label>ZAP</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="80"><label>Wireshark</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>WhatWeb / Wappalyzer</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="75"><label>OpenVAS</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Nessus</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Nikto</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Netcat</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Telnet</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Netdiscover</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Angry IP Scanner</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Advanced IP Scanner</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+      </div>
+
+      <!-- AI -->
+      <div class="skill-column">
+        <h3>AI</h3>
+        <div class="skill" data-val="80"><label>AI Prompting</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
       </div>
 
     </div>
   </div>
 </section>
+
 
 
     <section id="projects" class="page">
@@ -144,21 +184,22 @@
           <article class="project-card">
             <img src="assets/Basic-Strong-Password-Generator.jpg" alt="Basic Strong Password Generator">
             <h3>Basic Strong Password Generator (2025)</h3>
-            <p>The Caesar Cipher is one of the oldest known encryption techniques. It works by shifting each letter of the plaintext by a fixed number of positions in the alphabet. This tool enhances it by adding auto-decryption and brute-force cracking for educational and security learning purposes. </p>
+            <p>A simple Python script to generate a strong random password of desired length using uppercase letters, lowercase letters, digits, and special characters.</p>
             <p><a href="https://github.com/isayani-78/-Basic-Strong-Password-Generator" target="_blank" class="github-link">View on GitHub</a></p>
           </article>
 
           <article class="project-card">
             <img src="assets/caesar-cipher-generator.jpg" alt="Caeser Cipher Generator">
             <h3>Caeser Cipher Generator (2025)</h3>
-            <p>Encrypt and decrypt messages using Caesar cipher with a user-friendly interface.</p>
+            <p>The Caesar Cipher is one of the oldest known encryption techniques. It works by shifting each letter of the plaintext by a fixed number of positions in the alphabet. This tool enhances it by adding auto-decryption and brute-force cracking for educational and security learning purposes.</p>
             <p><a href="https://github.com/isayani-78/caesar-cipher-generator" target="_blank" class="github-link">View on GitHub</a></p>
           </article>
 
           <article class="project-card">
             <img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt="CMTL">
             <h3>CMTL — CyberSec Multi-Tool Launcher (2025–Present)</h3>
-            <p>Centralized toolkit for scanning, fingerprinting, and triage.</p>
+            <p>Cyber Security Multi-Tool Launcher is a unified GUI-based platform that integrates powerful network scanning, vulnerability assessment, penetration testing, and forensic tools into a single tool.
+Instead of manually running multiple tools, users can launch and manage them through one centralized interface with "Just a Click".</p>
             <p><a href="https://github.com/isayani-78/CMTL" target="_blank" class="github-link">View on GitHub</a></p>
           </article>
 
@@ -172,29 +213,85 @@
       </div>
     </section>
 
-    <section id="research" class="page">
-      <div class="content">
-        <!-- Research content here (unchanged) -->
+    <!-- Research & Goal Section -->
+<section id="research" class="page" style="background:#f8f9fa; padding:60px 20px;">
+  <div class="content" style="max-width:900px; margin:auto; text-align:left;">
+    <h2 style="color:#2c3e50; text-align:center;">Research & Goal</h2>
+    <p style="font-size:16px; line-height:1.7; color:#34495e; margin-top:20px;">
+      My research focuses on forensic artifact analysis, timeline reconstruction, and applied security automation. I actively explore AI-driven phishing detection, privacy-preserving forensic analysis, and the development of open-source forensic tools and case studies. Additionally, I investigate methods to enhance digital evidence acquisition and analysis using advanced machine learning techniques, aiming to improve accuracy and reduce investigation time. My work also encompasses cloud forensics, IoT security, mobile device investigations, and emerging threat analysis, allowing me to understand vulnerabilities across diverse digital platforms. I collaborate with peers and cybersecurity communities to validate findings, participate in real-world case studies, and refine best practices, ensuring that my research is both practical and impactful.
+      <br><br>
+      My ultimate goal is to contribute meaningfully to the cybersecurity and digital forensics community by improving investigative efficiency, bridging the gap between academic knowledge and real-world application, publishing insights, developing practical tools, and sharing guidance that empowers others in the field. Through my research and continuous learning, I strive to grow as a proficient professional capable of addressing complex security challenges and fostering safer digital environments. I am committed to combining technical expertise with creativity and practical application to make a lasting impact in the world of cybersecurity.
+    </p>
+  </div>
+</section>
+
+<!--  The Foundation of Forever -->
+<section id="foundation" class="page" style="background:#ffffff; padding:60px 20px;">
+  <div class="content" style="max-width:900px; margin:auto; text-align:center;">
+    <h2 style="color:#2c3e50;">The Foundation of Forever</h2>
+    <div style="margin-top:30px;">
+      <img src="assets/The Foundation of Forever.jpg" alt="The Foundation of Forever" style="width:100%; max-width:700px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.2);"/>
+    </div>
+    <p style="margin-top:20px; font-size:16px; color:#34495e;">
+      This section highlights one of my key projects and inspirations, representing a foundation built on knowledge, research, and continuous growth. The Foundation of Forever symbolizes my commitment to learning, forensic expertise, and cybersecurity exploration.
+    </p>
+  </div>
+</section>
+
+<!-- Contact Section -->
+<section id="contact" class="page" style="background:#ecf0f1; padding:60px 20px;">
+  <div class="content" style="max-width:600px; margin:auto; text-align:center;">
+    <h2 style="color:#2c3e50;">Contact Me</h2>
+    <p style="margin-top:10px; font-size:16px;">
+      📧 <a href="mailto:sayanimaity2024@gmail.com" style="color:#27ae60; text-decoration:none;">sayanimaity2024@gmail.com</a>
+    </p>
+
+    <form id="contact-form" action="REPLACE_WITH_FORMSPREE_ENDPOINT" method="POST" style="margin-top:30px; text-align:left;">
+      <div class="input-bar" style="margin-bottom:15px;">
+        <label for="name" style="font-weight:600; color:#2c3e50;">Name</label>
+        <input id="name" name="name" required placeholder="Your Name" style="width:100%; padding:12px; border-radius:8px; border:2px solid #bdc3c7; font-size:15px; transition:0.3s;"/>
       </div>
-    </section>
 
-    <section id="empire" class="page">
-      <div class="content">
-        <!-- Empire content here (unchanged) -->
+      <div class="input-bar" style="margin-bottom:15px;">
+        <label for="email" style="font-weight:600; color:#2c3e50;">Email</label>
+        <input id="email" name="email" type="email" required placeholder="Your Email" style="width:100%; padding:12px; border-radius:8px; border:2px solid #bdc3c7; font-size:15px; transition:0.3s;"/>
       </div>
-    </section>
 
-    <section id="contact" class="page">
-      <div class="content">
-        <!-- Contact content here (unchanged) -->
+      <div class="input-bar" style="margin-bottom:15px;">
+        <label for="message" style="font-weight:600; color:#2c3e50;">Message</label>
+        <textarea id="message" name="message" rows="5" required placeholder="Your Message" style="width:100%; padding:12px; border-radius:8px; border:2px solid #bdc3c7; font-size:15px; transition:0.3s;"></textarea>
       </div>
-    </section>
 
-    <footer class="site-footer">
-      <p>© <span id="year"></span> Sayani Maity — Built with care • Hosted on GitHub Pages</p>
-    </footer>
+      <button class="btn" type="submit" style="width:100%; padding:14px; background:#27ae60; color:white; border:none; border-radius:8px; font-size:16px; cursor:pointer; transition:0.3s;">Send Message</button>
 
-  </main>
+      <p class="hint" style="font-size:0.85rem; color:#7f8c8d; margin-top:10px;">Sign up at Formspree and replace the form action to receive messages.</p>
+    </form>
+  </div>
+
+  <style>
+    #contact-form input:focus,
+    #contact-form textarea:focus {
+      border-color: #27ae60;
+      box-shadow: 0 0 8px rgba(39, 174, 96, 0.5);
+      outline: none;
+    }
+
+    #contact-form button:hover {
+      background:#219150;
+    }
+
+    #contact a:hover {
+      text-decoration:underline;
+    }
+  </style>
+</section>
+
+<!-- Footer -->
+<footer class="site-footer" style="background:#2c3e50; color:white; text-align:center; padding:20px 0;">
+  <p>© <span id="year"></span> Sayani Maity — Built with care • Hosted on GitHub Pages</p>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+</footer>
+
 
   <style>
     /* Make "View on GitHub" links white */
