--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
         <div class="skill" data-val="80"><label>Kali Linux</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="70"><label>Black Arch</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="70"><label>Parrot</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Windows (as always)</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
       </div>
+      
 
       <!-- Tools -->
       <div class="skill-column">
@@ -163,6 +165,7 @@
         <div class="skill" data-val="70"><label>Netdiscover</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="70"><label>Angry IP Scanner</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="70"><label>Advanced IP Scanner</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>And Many More</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
       </div>
 
       <!-- AI -->
@@ -225,15 +228,26 @@ Instead of manually running multiple tools, users can launch and manage them thr
   </div>
 </section>
 
-<!--  The Foundation of Forever -->
+<!-- The Foundation of Forever -->
 <section id="foundation" class="page" style="background:#ffffff; padding:60px 20px;">
   <div class="content" style="max-width:900px; margin:auto; text-align:center;">
     <h2 style="color:#2c3e50;">The Foundation of Forever</h2>
+    
     <div style="margin-top:30px;">
-      <img src="assets/The Foundation of Forever.jpg" alt="The Foundation of Forever" style="width:100%; max-width:700px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.2);"/>
+      <!-- Image with URL-encoded spaces for GitHub Pages -->
+      <img src="assets/The%20Foundation%20of%20Forever.jpg" 
+           alt="The Foundation of Forever" 
+           style="width:100%; max-width:700px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.2);"
+           onerror="this.style.display='none'; this.nextElementSibling.style.display='block';"/>
+      <!-- Fallback message if image fails -->
+      <p style="display:none; color:#e74c3c; font-size:16px; margin-top:15px;">
+        Image not found. Please make sure "The Foundation of Forever.jpg" is uploaded in the assets folder.
+      </p>
     </div>
+
     <p style="margin-top:20px; font-size:16px; color:#34495e;">
-      This section highlights one of my key projects and inspirations, representing a foundation built on knowledge, research, and continuous growth. The Foundation of Forever symbolizes my commitment to learning, forensic expertise, and cybersecurity exploration.
+      This section highlights one of my key projects and inspirations, representing a foundation built on knowledge, research, and continuous growth. 
+      The Foundation of Forever symbolizes my commitment to learning, forensic expertise, and cybersecurity exploration.
     </p>
   </div>
 </section>
